[package]
name = "rusty_rogue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allegro = "0.0.44"
allegro_font = "0.0.44"
allegro_image = "0.0.44"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-pc-windows-gnu"

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-unknown-linux-gnu"
